Add questions and basic CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
 
-    <h1>Trivia Game</h1>
+    <h1>Galactic Jeopardy</h1>
+        <p>You've been abducted by aliens!</p>
+        <p>Answer all of their questions about Earth in order to get back home safely.</p>
+        <button type="button" class="start_button">Play</button>
     <script src="./script.js"></script>
 </body>
 </html>
