--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia Game</title>
+    <title>Galactic Jeopardy</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
 
-    <h1>Galactic Jeopardy</h1>
-        <p>You've been abducted by aliens!</p>
-        <p>Answer all of their questions about Earth in order to get back home safely.</p>
-        <button type="button" class="start_button">Play</button>
+<body>
+    <div class="container">
+        <div id="start_screen" class="flex-center flex-column">
+            <h1>Galactic Jeopardy</h1>
+            <p>You've been abducted by aliens!</p>
+            <p>Answer all of their questions about Earth to get home safely!</p>
+            <a class="play-btn" href="./game.html">Play Game</a> 
+
+        </div>
+    </div>
+
     <script src="./script.js"></script>
 </body>
+
 </html>
