--- a/game.html
+++ b/game.html
@@ -12,20 +12,18 @@
 <body>
 
     <div class="container">
-        <div class="question-container"></div>
-        <div id="question">
-            <h1 class="trivia">question</h1>
-        </div>
-        <div id="right"></div>
-        <div id="wrong"></div>
-        <div id="answer-buttons" class="btn-grid">
-            <button id="btn" class="answer1">Answer 1</button>
-            <button id="btn" class="answer2">Answer 2</button>
-            <button id="btn" class="answer3">Answer 3</button>
-            <button id="btn" class="answer4">Answer 4</button>
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
         </div>
         <div class="controls">
-            <button id="next-btn" class="next-btn">Next</button>
+            <button id="ready-btn" class="ready-btn btn">Are you ready?</button>
+            <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
     </div>
     <script src="./script.js"></script>
