--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galactic Jeopardy</title>
+    <title>Galactic Jeopardy - Rules</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -14,6 +14,8 @@
     <div class="container">
         <div id="start_screen" class="flex-center flex-column">
             <h1>Galactic Jeopardy</h1>
+            <img src="https://cdn.dribbble.com/users/677572/screenshots/14174245/media/dd52ca1aa144df3c64b62425c933142c.png"
+                alt="alien-face">
             <p>You've been abducted by aliens!</p>
             <p>Answer all of their questions about Earth to get home safely!</p>
             <a class="play-btn" href="./game.html">Play Game</a> 
