SAdd score counter & more questions, issue with buttons

--- a/game.html
+++ b/game.html
@@ -13,6 +13,13 @@
 
 <body>
 
+    <header class=>
+        <div class="score-container">
+            <h2>Score: </h2>
+            <h2 class="trivia-score">000</h2>
+        </div>
+    </header>
+
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
