Add music and video background

--- a/game.html
+++ b/game.html
@@ -13,10 +13,13 @@
 
 <body>
 
+    <audio src="./VULFPECK _ It Gets Funkier IV (feat. Louis Cole).mp3" controls loop>
+    </audio>
+
     <header class=>
         <div class="score-container">
             <h2>Score: </h2>
-            <h2 class="trivia-score">000</h2>
+            <h2 class="trivia-score">0</h2>
         </div>
     </header>
 
@@ -34,7 +37,11 @@
             <button id="ready-btn" class="ready-btn btn">Are you ready?</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
+
     </div>
+
+    <video src="./editedspacevideo.mp4" id="videoBG" autoplay muted loop></video>
+
     <script src="./script.js"></script>
 </body>
 
