Decrease size of video file

--- a/game.html
+++ b/game.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <video src="./editedspacevideo.mp4" id="videoBG" autoplay muted loop></video>
+    <video src="./spaceflying.mp4" id="videoBG" autoplay muted loop></video>
 
     <script src="./script.js"></script>
 </body>
