--- a/game.html
+++ b/game.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
     
-    <head>
-        <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Galactic Jeopardy - Play</title>
-        <link rel="stylesheet" href="./game.css">
-    </head>
+<head>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Galactic Jeopardy - Play</title>
+    <link rel="stylesheet" href="./game.css">
+</head>
 
 <body>
 
@@ -18,17 +18,16 @@
 
     <div class="video-container">
         <div class="foreground">
-<iframe id="videoBG"  src="https://www.youtube.com/embed/TrJs7VRkztI?
-controls=0&amp;showinfo=0&amp;rel=0&autoplay=1&amp;loop=1&mute=1" title="YouTube video player"></iframe>
-</div>
-</div>
+            <iframe id="videoBG"  src="https://www.youtube.com/embed/TrJs7VRkztI?controls=0&amp;showinfo=0&amp;rel=0&autoplay=1&amp;loop=1&mute=1" title="YouTube video player"></iframe>
+        </div>
+    </div>
 
 <div id="vidtop-content">
     <header>
-        <div class="score-container">
+    <div class="score-container">
             <h2>Score: </h2>
             <h2 class="trivia-score">0</h2>
-        </div>
+    </div>
     </header>
 
     <div class="container">
