made more responsive

--- a/game.html
+++ b/game.html
@@ -13,11 +13,11 @@
 
 <body>
 
-    <audio src="./VULFPECK.mp3" controls loop>
+    <audio class="leftcorner" src="./VULFPECK.mp3" controls loop>
     </audio>
 
     <header class=>
-        <div class="score-container">
+        <div class="score-container topcorner">
             <h2>Score: </h2>
             <h2 class="trivia-score">0</h2>
         </div>
@@ -40,7 +40,7 @@
 
     </div>
 
-    <video src="./spaceflying.mp4" id="videoBG" autoplay muted loop></video>
+    <video src="./spaceflying.mp4" poster="./poster.png" id="videoBG" autoplay muted loop></video>
 
     <script src="./script.js"></script>
 </body>
