--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 
 <body>
-    <div class="container">
-        <div id="start_screen" class="flex-center flex-column">
+    <div class="center">
+        <div id="start_screen" >
             <h1>GALACTIC JEOPARDY</h1>
             <img src="https://cdn.dribbble.com/users/677572/screenshots/14174245/media/dd52ca1aa144df3c64b62425c933142c.png"
                 alt="alien-face">
